# go-crud-example

./: .gitignore  Dockerfile  README.md  actions.go  docker-compose.yml  go.mod  go.sum  inputs.go  main.go  middlewares.go  models.go  pyproject.toml  routes.go  test.py
.github/workflows/: cypress.yml  python.yml
cypress/e2e/: smoke.cy.js
cypress/e2e/go-crud-example/: login.cy.js  pages.cy.js  tools.cy.js  users.cy.js
cypress/support/: commandsGoCrudExample.js  e2e.js
templates/: index.html  page.html  tools.html
templates/admin/: collection_todos_index.html  error.html  pages_index.html  users_edit.html  users_show.html
templates/admin/pages/: edit.html  index.html  new.html  show.html
templates/admin/users/: index.html  new.html
templates/layouts/: admin.html  public.html
templates/public/: login.html  tools.html
