[tool.poetry]
name = "go-crud-example"
version = "0.1.0"
description = ""
authors = ["Stanislav Zaleski <sigmaray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.29.0"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
